@@ -1,5 +1,12 @@
 2011-06-18  Robin Getz  <robin.getz@analog.com>
 
+	* bfin-sim.c (decode_multfunc): Call new is_macmod_signed, and
+	allow MM to sign extend all the time.
+	(decode_macfunc): Likewise.  Drop sign extension of unsigned
+	values.
+
+2011-06-18  Robin Getz  <robin.getz@analog.com>
+
 	* bfin-sim.c (extract_mult): When mmod is M_IH, change the order
 	from round/saturate to saturate/round/saturate.
 
