@@ -1,3 +1,7 @@
+2011-06-18  Robin Getz  <robin.getz@analog.com>
+
+	* bfin.h (is_macmod_signed): New func
+
 2011-06-18  Mike Frysinger  <vapier@gentoo.org>
 
 	* bfin.h (is_macmod_pmove): Add missing space before func args.
